--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,24 @@
 apply plugin: 'com.android.application'
 
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
 
+
+
+
+
 android {
+    lintOptions {
+        abortOnError false
+    }
+    configurations {
+        all {
+            exclude module: 'httpclient'
+            exclude module: 'json'
+            exclude group: 'org.apache.httpcomponents'
+        }
+    }
+
     compileSdkVersion 28
     defaultConfig {
         applicationId "ua.palamarenko.cozyandroid"
