--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,8 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
     }
 }
 
@@ -21,8 +21,13 @@ allprojects {
         jcenter()
         
     }
+
+}
+tasks.withType(Javadoc).all {
+    enabled = false
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
