--- a/cozyandroid2/build.gradle
+++ b/cozyandroid2/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'com.jfrog.bintray'
-
+apply plugin: 'kotlin-kapt'
 
 tasks.withType(Javadoc).all {
     enabled = false
@@ -19,10 +19,10 @@ ext {
 
     libraryDescription = 'This view is a container that supports diagonal scroll and fling gesture. It is based on AOSP HorizontalScrollView.'
 
-    siteUrl = 'https://github.com/LissF/DiagonalScrollView'
-    gitUrl = 'https://github.com/LissF/DiagonalScrollView.git'
+    siteUrl = 'https://github.com/palamarenko/CozyAndroid2'
+    gitUrl = 'https://github.com/palamarenko/CozyAndroid2'
 
-    libraryVersion = '0.1.0'
+    libraryVersion = '0.1.8'
 
     developerId = 'lissf'
     developerName = 'Yegor Zatsepin'
@@ -73,7 +73,7 @@ dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
@@ -95,6 +95,8 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.5@aar'
     implementation "com.google.dagger:dagger:$daggerVersion"
+    kapt 'androidx.room:room-compiler:2.0.0'
+    kapt "com.google.dagger:dagger-compiler:$daggerVersion"
 }
 
 group = publishedGroupId
