--- a/cozyandroid2/build.gradle
+++ b/cozyandroid2/build.gradle
@@ -22,7 +22,7 @@ ext {
     siteUrl = 'https://github.com/palamarenko/CozyAndroid2'
     gitUrl = 'https://github.com/palamarenko/CozyAndroid2'
 
-    libraryVersion = '0.2.14'
+    libraryVersion = '0.2.35'
 
     developerId = 'lissf'
     developerName = 'Andrey Palamarenko'
@@ -93,6 +93,7 @@ dependencies {
     implementation 'androidx.room:room-testing:2.0.0'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.9'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'ru.tinkoff.decoro:decoro:1.3.5'
     implementation 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.5@aar'
     implementation "com.google.dagger:dagger:$daggerVersion"
