--- a/cozyandroid2/src/main/AndroidManifest.xml
+++ b/cozyandroid2/src/main/AndroidManifest.xml
@@ -1,2 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="ua.palamarenko.cozyandroid2"/>
+          package="ua.palamarenko.cozyandroid2">
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+</manifest>
