--- a/cozyandroid2/build.gradle
+++ b/cozyandroid2/build.gradle
@@ -22,7 +22,7 @@ ext {
     siteUrl = 'https://github.com/palamarenko/CozyAndroid2'
     gitUrl = 'https://github.com/palamarenko/CozyAndroid2'
 
-    libraryVersion = '0.4.10'
+    libraryVersion = '0.4.16'
 
     developerId = 'lissf'
     developerName = 'Andrey Palamarenko'
@@ -71,10 +71,12 @@ dependencies {
     def daggerVersion = "2.15"
     def okHttpVersion = "3.8.1"
 
+    api 'ru.tinkoff.decoro:decoro:1.3.5'
+    api 'com.github.dhaval2404:imagepicker-support:1.5'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -84,20 +86,18 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-simplexml:$retrofit_version"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
-
     implementation "com.squareup.okhttp3:okhttp:$okHttpVersion"
     implementation "com.squareup.okhttp3:logging-interceptor:$okHttpVersion"
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
-    implementation 'androidx.room:room-rxjava2:2.1.0'
-    implementation 'androidx.room:room-runtime:2.1.0'
-    implementation 'androidx.room:room-testing:2.1.0'
+    implementation 'androidx.room:room-rxjava2:2.2.3'
+    implementation 'androidx.room:room-runtime:2.2.3'
+    implementation 'androidx.room:room-testing:2.2.3'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation 'ru.tinkoff.decoro:decoro:1.3.5'
     implementation 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.5@aar'
     implementation "com.google.dagger:dagger:$daggerVersion"
-    kapt 'androidx.room:room-compiler:2.1.0'
+    kapt 'androidx.room:room-compiler:2.2.3'
     kapt "com.google.dagger:dagger-compiler:$daggerVersion"
 }
 
