--- a/cozyandroid2/build.gradle
+++ b/cozyandroid2/build.gradle
@@ -22,7 +22,7 @@ ext {
     siteUrl = 'https://github.com/palamarenko/CozyAndroid2'
     gitUrl = 'https://github.com/palamarenko/CozyAndroid2'
 
-    libraryVersion = '0.4.19'
+    libraryVersion = '0.4.40'
 
     developerId = 'lissf'
     developerName = 'Andrey Palamarenko'
@@ -73,6 +73,7 @@ dependencies {
 
     api 'ru.tinkoff.decoro:decoro:1.3.5'
     api 'com.github.dhaval2404:imagepicker-support:1.5'
+    api 'com.github.freeze-frames:SlidingItemMenuRecyclerView:1.0.5'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
