--- a/cozyandroid2/build.gradle
+++ b/cozyandroid2/build.gradle
@@ -22,7 +22,7 @@ ext {
     siteUrl = 'https://github.com/palamarenko/CozyAndroid2'
     gitUrl = 'https://github.com/palamarenko/CozyAndroid2'
 
-    libraryVersion = '0.4.43'
+    libraryVersion = '0.4.49'
 
     developerId = 'lissf'
     developerName = 'Andrey Palamarenko'
@@ -72,8 +72,18 @@ dependencies {
     def okHttpVersion = "3.8.1"
 
     api 'ru.tinkoff.decoro:decoro:1.3.5'
+
+    // pick image from library or camera
     api 'com.github.dhaval2404:imagepicker-support:1.5'
+
+
+    // tool for recycler view
     api 'com.github.freeze-frames:SlidingItemMenuRecyclerView:1.0.5'
+
+    //for load and view image
+    api 'com.squareup.picasso:picasso:2.71828'
+    api 'com.github.chrisbanes:PhotoView:2.3.0'
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
@@ -95,7 +105,6 @@ dependencies {
     implementation 'androidx.room:room-testing:2.2.3'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.5@aar'
     implementation "com.google.dagger:dagger:$daggerVersion"
     kapt 'androidx.room:room-compiler:2.2.3'
