--- a/cozyandroid2/build.gradle
+++ b/cozyandroid2/build.gradle
@@ -22,7 +22,7 @@ ext {
     siteUrl = 'https://github.com/palamarenko/CozyAndroid2'
     gitUrl = 'https://github.com/palamarenko/CozyAndroid2'
 
-    libraryVersion = '0.4.59'
+    libraryVersion = '0.4.74'
 
     developerId = 'lissf'
     developerName = 'Andrey Palamarenko'
@@ -34,7 +34,7 @@ ext {
 }
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
 
     lintOptions {
         abortOnError false
@@ -47,9 +47,14 @@ android {
         }
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     defaultConfig {
         minSdkVersion 22
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
 
@@ -74,37 +79,48 @@ dependencies {
     api 'ru.tinkoff.decoro:decoro:1.3.5'
 
     // pick image from library or camera
-    api 'com.github.dhaval2404:imagepicker-support:1.5'
+    api 'com.github.dhaval2404:imagepicker:1.6'
 
 
     // tool for recycler view
     api 'com.github.freeze-frames:SlidingItemMenuRecyclerView:1.0.5'
+    api 'androidx.recyclerview:recyclerview:1.1.0'
+
 
     //for load and view image
     api 'com.squareup.picasso:picasso:2.71828'
     api 'com.github.chrisbanes:PhotoView:2.3.0'
+    api 'com.github.dhaval2404:imagepicker:1.6'
+
+    // okhttp retrofit
+    api "com.squareup.retrofit2:retrofit-converters:$retrofit_version"
+    api "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    api "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
+    api "com.squareup.okhttp3:okhttp:$okHttpVersion"
+    api "com.squareup.okhttp3:logging-interceptor:$okHttpVersion"
+
+    // data base
+    api 'androidx.room:room-rxjava2:2.2.4'
+    api 'androidx.room:room-runtime:2.2.4'
+    api 'androidx.room:room-testing:2.2.4'
+
+    // rx java
+    api 'io.reactivex.rxjava2:rxjava:2.2.9'
+    api 'io.reactivex.rxjava2:rxandroid:2.1.1'
+
+
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
-    implementation "com.squareup.retrofit2:retrofit-converters:$retrofit_version"
-    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
-    implementation "com.squareup.retrofit2:converter-simplexml:$retrofit_version"
-    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
-    implementation "com.squareup.okhttp3:okhttp:$okHttpVersion"
-    implementation "com.squareup.okhttp3:logging-interceptor:$okHttpVersion"
+
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.room:room-rxjava2:2.2.3'
-    implementation 'androidx.room:room-runtime:2.2.3'
-    implementation 'androidx.room:room-testing:2.2.3'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.5@aar'
     implementation "com.google.dagger:dagger:$daggerVersion"
     kapt 'androidx.room:room-compiler:2.2.3'
