--- a/cozyandroid2/build.gradle
+++ b/cozyandroid2/build.gradle
@@ -24,7 +24,7 @@ ext {
     siteUrl = 'https://github.com/palamarenko/CozyAndroid2'
     gitUrl = 'https://github.com/palamarenko/CozyAndroid2'
 
-    libraryVersion = '0.5.36'
+    libraryVersion = '0.5.38'
 
     developerId = 'lissf'
     developerName = 'Andrey Palamarenko'
@@ -88,7 +88,11 @@ dependencies {
     api 'com.github.freeze-frames:SlidingItemMenuRecyclerView:1.0.5'
     api 'androidx.recyclerview:recyclerview:1.1.0'
 
-    api "android.arch.paging:runtime:1.0.1"
+    def paging_version = "3.0.0-alpha02"
+
+    // android paging library
+    api "androidx.paging:paging-runtime:$paging_version"
+    api "androidx.paging:paging-rxjava2:$paging_version"
 
     //for load and view image
     api 'com.squareup.picasso:picasso:2.71828'
