--- a/cozyandroid2/build.gradle
+++ b/cozyandroid2/build.gradle
@@ -77,6 +77,7 @@ dependencies {
     def retrofit_version = '2.3.0'
     def daggerVersion = "2.15"
     def okHttpVersion = "3.8.1"
+    def roomVersion = '2.3.0-alpha02'
 
     api 'ru.tinkoff.decoro:decoro:1.3.5'
 
@@ -89,11 +90,12 @@ dependencies {
     api 'com.github.freeze-frames:SlidingItemMenuRecyclerView:1.0.5'
     api 'androidx.recyclerview:recyclerview:1.1.0'
 
-    def paging_version = "3.0.0-alpha02"
+    def paging_version = "3.0.0-alpha03"
 
     // android paging library
     api "androidx.paging:paging-runtime:$paging_version"
     api "androidx.paging:paging-rxjava2:$paging_version"
+
 
     //for load and view image
     api 'com.squareup.picasso:picasso:2.71828'
@@ -109,9 +111,9 @@ dependencies {
     api "com.squareup.okhttp3:logging-interceptor:$okHttpVersion"
 
     // data base
-    api 'androidx.room:room-rxjava2:2.2.5'
-    api 'androidx.room:room-runtime:2.2.5'
-
+    api "androidx.room:room-rxjava2:$roomVersion"
+    api "androidx.room:room-runtime:$roomVersion"
+    api "androidx.room:room-ktx:$roomVersion"
     // rx java
     api 'io.reactivex.rxjava2:rxjava:2.2.15'
     api 'io.reactivex.rxjava2:rxandroid:2.1.1'
@@ -129,7 +131,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.5@aar'
     implementation "com.google.dagger:dagger:$daggerVersion"
-    kapt 'androidx.room:room-compiler:2.2.5'
+    kapt "androidx.room:room-compiler:$roomVersion"
     kapt "com.google.dagger:dagger-compiler:$daggerVersion"
 }
 
